[gd_scene load_steps=19 format=3 uid="uid://bnv0mtpkeouh"]

[ext_resource type="Material" uid="uid://cvx0n8ay4g3ck" path="res://Enemies/enemy_base.tres" id="1_cwvd1"]
[ext_resource type="Script" path="res://Enemies/enemy_body_new.gd" id="1_llh25"]
[ext_resource type="Texture2D" uid="uid://dyng0l5luw3ya" path="res://Textures/Enemy/enemy_1_anim.png" id="2_ofjbd"]
[ext_resource type="Texture2D" uid="uid://ysqs7b3kkmu0" path="res://Textures/Player/player_shadow_ph.png" id="3_80775"]
[ext_resource type="Shader" path="res://Enemies/enemy_base_dissolve.gdshader" id="4_jb1es"]
[ext_resource type="PackedScene" uid="uid://dtbv2h63hij6" path="res://Utility/hurt_box.tscn" id="4_t6fd2"]
[ext_resource type="PackedScene" uid="uid://olluckrijwkt" path="res://Utility/hit_box.tscn" id="5_lsvuq"]
[ext_resource type="AudioStream" uid="uid://d3v0fbgvxj1y" path="res://Audio/SoundEffect/hitHurt4.wav" id="7_5mjt2"]
[ext_resource type="AudioStream" uid="uid://cu1nnh1d4tvfx" path="res://Audio/SoundEffect/hitHurt5.wav" id="8_y0k1n"]

[sub_resource type="Animation" id="Animation_sgtpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.95)]
}

[sub_resource type="Animation" id="Animation_jv1lk"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.95), Vector2(0.95, 1), Vector2(1, 1.05), Vector2(1.05, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6vg0u"]
_data = {
"RESET": SubResource("Animation_sgtpq"),
"walk": SubResource("Animation_jv1lk")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4pqhx"]
resource_local_to_scene = true
shader = ExtResource("4_jb1es")
shader_parameter/hit = null
shader_parameter/dying = null
shader_parameter/dissolve_speed = 1.0
shader_parameter/flash_color = null
shader_parameter/flash_value = null

[sub_resource type="CircleShape2D" id="CircleShape2D_bvglu"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6orw7"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ikh7p"]
radius = 4.0

[sub_resource type="Curve" id="Curve_v3n8u"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.997938, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_uvogu"]
offsets = PackedFloat32Array(0, 0.5186, 1)
colors = PackedColorArray(0.67, 0, 0, 1, 0.49, 0, 0, 1, 0.49, 0, 0, 0)

[node name="enemy_1_new" type="Area2D" groups=["enemy"]]
z_index = 2
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
script = ExtResource("1_llh25")
hp = 5
knockback_recovery = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6vg0u")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_cwvd1")
scale = Vector2(1, 0.95)
texture = ExtResource("2_ofjbd")
hframes = 2

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
material = SubResource("ShaderMaterial_4pqhx")
position = Vector2(0, 8)
texture = ExtResource("3_80775")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_bvglu")

[node name="HurtBox" parent="." instance=ExtResource("4_t6fd2")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_6orw7")
debug_color = Color(0.984314, 0.129412, 0, 0.247059)

[node name="HitBox" parent="." instance=ExtResource("5_lsvuq")]
position = Vector2(0, 2)
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ikh7p")

[node name="snd_enemy_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5mjt2")
volume_db = -5.0

[node name="snd_enemy_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_y0k1n")
volume_db = -5.0

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="BloodSplatter" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.8
explosiveness = 0.3
randomness = 0.75
lifetime_randomness = 0.5
direction = Vector2(-1, 0)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
damping_min = 10.0
damping_max = 10.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_v3n8u")
color_ramp = SubResource("Gradient_uvogu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
